--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@
 /PruebaGit/nbproject/private/
 /Sesion2/nbproject/private/
 /Sesion2/build/
+/Estructuras/nbproject/private/
+/June8/nbproject/private/
+/Estructuras/build/
+/Proyecto/nbproject/private/
+/Proyecto/build/
+/PracticaJunio22/nbproject/private/
+/PracticaJunio22/build/
+/Empleado/nbproject/private/
+/Empleado/build/
+/Empleado/dist/
